# SIH25

./: README.md
CWE/: .gitignore  Cargo.toml
CWE/cwe/: Cargo.toml
CWE/cwe-cli/: Cargo.toml
CWE/cwe-cli/src/: main.rs
CWE/cwe/src/: device.rs  evidence.rs  lib.rs  signed.rs  wipe.rs
CWE/gui/: Cargo.toml
CWE/gui/src/: main.rs
