[package]
name = "cwe"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["process", "macros", "rt-multi-thread"] }
