[package]
name = "cwe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
ed25519-dalek = "1.0"
bincode = "1.3"
base64 = "0.13"
rand = "0.8"
which = "4.4"
clap = { version = "4.3", features = ["derive"] }

